force-app/main/default/objects/Account_Name_History__c/Account_Name_History__c.object-meta.xml
<CustomObject>
    <label>Account Name History</label>
    <nameField>
        <label>Account Name History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Name History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>