force-app/main/default/objects/Account_Name_History__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <description>Full Account id of record</description>
    <label>AccountID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>