force-app/main/default/objects/Account_Name_History__c/fields/Change_Source__c.field-meta.xml
<CustomField>
    <fullName>Change_Source__c</fullName>
    <label>Change Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Change</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>