force-app/main/default/objects/Account_Name_History__c/fields/Current_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_ID__c</fullName>
    <label>Current Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>