force-app/main/default/objects/Account_Name_History__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date the change occurred.</description>
    <label>Effective_Date</label>
    <type>DateTime</type>
</CustomField>