force-app/main/default/objects/Account_Name_History__c/fields/Original_Accountid__c.field-meta.xml
<CustomField>
    <fullName>Original_Accountid__c</fullName>
    <description>Original Accountid</description>
    <label>Original_Accountid</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>