force-app/main/default/objects/Account_Name_History__c/fields/Original_Stripped_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Stripped_Name__c</fullName>
    <description>Stripped name for the original Account</description>
    <label>Original Stripped Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>