force-app/main/default/objects/Account_Name_History__c/fields/SF_HISTORY_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_HISTORY_ID__c</fullName>
    <label>SF HISTORY ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>